tests/test_error_var_deduction.err
Error in line 2: Type for variable "a" can not be deducted.
