tests/test_error_var_deduction.uk
def main() void{
    auto a;
    return();
}
